--- a/angular-10-registration-login-example-master/src/app/app.component.html
+++ b/angular-10-registration-login-example-master/src/app/app.component.html
@@ -1,5 +1,5 @@
 ﻿<!-- main app container -->
-<div class="app-container" [ngClass]="{ 'bg-light': user }" style="background-image: url(https://image.freepik.com/vector-gratis/ilustracion-adorno-popular-patrones-fisuras_1217-1334.jpg);">
+<div class="app-container" [ngClass]="{ 'bg-light': user }" style="background-image: url(https://image.freepik.com/vector-gratis/lindos-personajes-navidenos_2100-345.jpg);"></div>
     <alert></alert>
     <router-outlet></router-outlet>
 </div>
